Removed stickiness of dropdown and fixed the dropdown alignment problem

--- a/Frontend/src/app/pages/room-creator/room-creator.component.css
+++ b/Frontend/src/app/pages/room-creator/room-creator.component.css
@@ -51,17 +51,12 @@
 
 .room-creater-margin-left
 {
-  margin-left: 19%;
-}
-
-.dropdown-margin-left
-{
-  margin-left: 8%;
+  margin-left: 20%;
 }
 
 .dropdown-margin
 {
-  margin-left: 6%;
+  margin-left: 20% !important;
 }
 .inventory-depth
 {
